<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">TERA</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="Registration">Registration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_location">Location</string>
    <string name="menu_travel_history">Travel History</string>
    <string name="menu_about_application">About Application</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="account">Account</string>
    <string name="tera_app_v1_0">TERA APP V1.0</string>
    <string name="notification">Notification</string>
    <string name="send">SEND EMAIL</string>
    <string name="map_key" translatable="false">AIzaSyCOvg2oewyhjExuHvW3m0oDhVmxp2MST7E</string>
    <string name="image">image</string>
    <string name="login">LOGIN</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="continue_with_google">Continue with Google</string>

</resources>